--- a/package.json
+++ b/package.json
@@ -2,16 +2,26 @@
   "name": "ytdl-web",
   "version": "1.0.0",
   "author": "iamtakagi",
+  "main": "dist/main.js",
+  "scripts": {
+    "build": "yarn cross-env NODE_ENV=production webpack --mode production",
+    "start": "NODE_ENV=production node dist/main.js"
+  },
   "devDependencies": {
     "@types/koa": "^2.13.4",
     "@types/koa__router": "^8.0.11",
     "@types/node": "^16.11.11",
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
+    "@types/webpack": "^5.28.0",
+    "cross-env": "^7.0.3",
     "ts-loader": "^9.2.3",
     "ts-node": "^10.4.0",
     "ts-node-dev": "^1.1.8",
-    "typescript": "^4.5.2"
+    "typescript": "^4.5.2",
+    "webpack": "^5.68.0",
+    "webpack-cli": "^4.9.2",
+    "webpack-node-externals": "^3.0.0"
   },
   "dependencies": {
     "@koa/router": "^10.1.1",
