--- a/package.json
+++ b/package.json
@@ -9,10 +9,9 @@
   },
   "devDependencies": {
     "@types/koa": "^2.13.4",
+    "@types/koa-static": "^4.0.2",
     "@types/koa__router": "^8.0.11",
     "@types/node": "^16.11.11",
-    "@types/react": "^17.0.37",
-    "@types/react-dom": "^17.0.11",
     "@types/webpack": "^5.28.0",
     "cross-env": "^7.0.3",
     "ts-loader": "^9.2.3",
@@ -26,9 +25,7 @@
   "dependencies": {
     "@koa/router": "^10.1.1",
     "koa": "^2.13.4",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "transform-ts": "^0.3.0",
+    "koa-static": "^5.0.0",
     "ytdl-core": "^4.10.1"
   }
 }
