--- a/package.json
+++ b/package.json
@@ -9,9 +9,7 @@
     "start": "NODE_ENV=production node dist/main.js"
   },
   "devDependencies": {
-    "@types/koa": "^2.13.4",
-    "@types/koa-static": "^4.0.2",
-    "@types/koa__router": "^8.0.11",
+    "@types/express": "^4.17.13",
     "@types/node": "^16.11.11",
     "@types/webpack": "^5.28.0",
     "cross-env": "^7.0.3",
@@ -24,9 +22,7 @@
     "webpack-node-externals": "^3.0.0"
   },
   "dependencies": {
-    "@koa/router": "^10.1.1",
-    "koa": "^2.13.4",
-    "koa-static": "^5.0.0",
+    "express": "^4.17.3",
     "ytdl-core": "^4.10.1"
   }
 }
